Fix font size in textarea
Summary: `font-family: inherit` doesn't inherit the font size resulting in using default monospace font size for inherited font family which results in too big font.

Test Plan: Wrote a comment, wrote an inline comment.

Reviewers: nh, chad, epriestley

Reviewed By: epriestley

CC: aran, Korvin

Differential Revision: https://secure.phabricator.com/D3997

--- a/webroot/rsrc/css/core/core.css
+++ b/webroot/rsrc/css/core/core.css
@@ -70,7 +70,7 @@ body.phabricator-chromeless-page {
 }
 
 textarea {
-  font-family: inherit;
+  font: inherit;
 }
 
 table {
